Overflow fixes on iphone

--- a/_sass/jekyll-theme-minimalistic.scss
+++ b/_sass/jekyll-theme-minimalistic.scss
@@ -233,6 +233,7 @@ hr {
     float:none;
     position:static;
     width:auto;
+    overflow-x: hidden;
   }
 
   header {
@@ -267,6 +268,7 @@ hr {
 
   header {
     padding:0;
+    overflow-x: hidden;
   }
 
   header ul, header p.view {
